# fin_research_1

./: BLOOMBERG_API_SETUP.md  README.md  bloomberg_options_data.xlsx  data_research.py  find_wheel_instructions.md  heston_analysis.py  install_blpapi.ps1  install_dependencies.py  nvda_options_2025-12-10.xlsx  nvda_options_2025-12-19_heston.xlsx  nvda_options_fetcher.py  options_chain_analyzer.py  requirements.txt  simple_options_example.py  test_bloomberg_setup.py
analysis/: black_scholes_quantlib_output.xlsx  bloomberg_options_top50.xlsx  bs_heston_market_comparison.xlsx  heston_vs_market_direct.xlsx  nvda_options_2025-12-19.xlsx  nvda_options_2025-12-19_bs.xlsx
blpapi_cpp_3.25.3.1/doc/: ChangeLog.txt
blpapi_cpp_3.25.3.1/examples/demoapps/: BroadcastPublisherExample.cpp  CMakeLists.txt  InteractivePublisherExample.cpp  README.md  RequestServiceConsumerExample.cpp  RequestServiceProviderExample.cpp  SecurityLookupExample.cpp  SubscriptionExample.cpp
blpapi_cpp_3.25.3.1/examples/unittests/: CMakeLists.txt  GTEST_CMakeLists.txt.in
blpapi_cpp_3.25.3.1/examples/unittests/mktnotifier/: CMakeLists.txt
blpapi_cpp_3.25.3.1/examples/unittests/mktnotifier/src/: CMakeLists.txt
blpapi_cpp_3.25.3.1/examples/unittests/snippets/: CMakeLists.txt
blpapi_cpp_3.25.3.1/examples/unittests/snippets/events/: events.t.cpp
blpapi_cpp_3.25.3.1/include/: blpapi_abstractsession.h  blpapi_call.h  blpapi_constant.h  blpapi_correlationid.h  blpapi_datetime.h  blpapi_deprecate.h  blpapi_dispatchtbl.h  blpapi_element.h  blpapi_error.h  blpapi_event.h  blpapi_eventdispatcher.h  blpapi_eventformatter.h  blpapi_identity.h  blpapi_logging.h  blpapi_message.h  blpapi_messageformatter.h  blpapi_name.h  blpapi_names.h  blpapi_providersession.h  blpapi_request.h  blpapi_requesttemplate.h  blpapi_schema.h  blpapi_service.h  blpapi_session.h  blpapi_sessionoptions.h  blpapi_subscriptionlist.h  blpapi_testutil.h  blpapi_topic.h  blpapi_topiclist.h  blpapi_versionmacros.h  blpapi_zfputil.h
blpapi_cpp_3.25.3.1/lib/: blpapi3_32.lib  blpapi3_64.lib
scripts/: amd_options_2025-12-19.xlsx  animated_trading_visualization.py  bbai_options_2025-12-19.xlsx  bbai_options_2025-12-19_heston.xlsx  black_scholes_analysis.py  black_scholes_calculator.py  bloom_alive.py  bloomberg_alive.py  calibration data.txt  check_aur_excel.py  check_aur_excel_detailed.py  check_crcl_excel.py  check_excel_contents.py  check_excel_trades.py  check_nvda_data.py  check_nvda_hourly_data.py  check_nvda_puts_hourly_data.py  check_trades.py  complete_heston_strategy.py  comprehensive_analysis.py  crcl_options_2025-12-19_bs.xlsx  crcl_options_2025-12-19_heston.xlsx  debug_aur_excel.py  debug_aur_hour_logic.py  debug_hour_logic.py  debug_trade_parsing.py  detailed_curvy_animation.py  enhanced_trade_animation.py  fetch.py  fetch_options_to_excel.py  fix_excel_trades.py  fix_excel_trades_comprehensive.py  fix_excel_trades_simple.py  heston_calculator.py  heston_trading_strategy.py  improved_multi_company_strategy.py  improved_strategy.py  multi_company_puts_strategy.py  multi_company_strategy.py  multi_company_strategy_offline.py  (+16 more)
scripts/analysis/: amd_options_2025-12-19_bs.xlsx  amd_options_2025-12-19_heston.xlsx  avgo_options_2025-12-19.xlsx  avgo_options_2025-12-19_bs.xlsx  avgo_options_2025-12-19_heston.xlsx  bbai_options_2025-12-19_bs.xlsx  black_scholes_quantlib_output.xlsx  bloomberg_options_top50.xlsx  bs_heston_market_comparison.xlsx  crcl_options_2025-12-19.xlsx  heston_vs_market_direct.xlsx  nvda_options_2025-12-19.xlsx  soun_options_2025-10-17.xlsx
scripts/excels/: amd_options_2025-08-15.xlsx  amd_options_2025-08-15_heston.xlsx  amd_pnl_log.xlsx  amd_pnl_tracking.xlsx  amd_strikes_below_market.xlsx  avgo_options_2025-08-15.xlsx  avgo_options_2025-08-15_heston.xlsx  avgo_pnl_log.xlsx  avgo_pnl_tracking.xlsx  avgo_strikes_below_market.xlsx  bbai_options_2025-08-15.xlsx  bbai_options_2025-08-15_heston.xlsx  bbai_pnl_log.xlsx  bbai_pnl_tracking.xlsx  bbai_strikes_below_market.xlsx  crcl_options_2025-08-15.xlsx  crcl_options_2025-08-15_heston.xlsx  crcl_pnl_log.xlsx  crcl_pnl_tracking.xlsx  crcl_strikes_below_market.xlsx  nvda_call_options_2025-09-19.xlsx  nvda_options_2025-08-15.xlsx  nvda_options_2025-08-15_heston.xlsx  nvda_pnl_log.xlsx  nvda_pnl_tracking.xlsx  nvda_strikes_below_market.xlsx  sound_options_2025-08-15.xlsx  sound_options_2025-08-15_heston.xlsx  sound_pnl_log.xlsx  sound_pnl_tracking.xlsx  sound_strikes_below_market.xlsx  tsla_options_2025-08-15.xlsx  tsla_options_2025-08-15_heston.xlsx  tsla_pnl_log.xlsx  tsla_pnl_tracking.xlsx  tsla_strikes_below_market.xlsx
webapp/: QUICK_START.md  README.md  app.py  requirements.txt  run.py  start.sh
webapp/templates/: index.html
(+604 files in other folders)
